--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -21,6 +21,30 @@
   top: 18px;
 }
 
+.nav_login {
+  font-family: 'Univers LT W01 45 Light';
+  font-size: 20px;
+  margin-right: 10px;
+  margin-left: 10px;
+  color: rgb(255,255,200);
+  text-decoration: none;
+  position: absolute;
+  right: 5%;
+  top: 18px;
+}
+
+.nav_signup {
+  font-family: 'Univers LT W01 45 Light';
+  font-size: 20px;
+  margin-right: 10px;
+  margin-left: 10px;
+  color: rgb(255,255,200);
+  text-decoration: none;
+  position: absolute;
+  right: 1%;
+  top: 18px;
+}
+
 .nav_home {
   position: absolute;
   left: .2%;
@@ -30,11 +54,18 @@
   position: absolute;
   right: 1%;
   top: 18px;
+  border: solid blue;
 }
 
 .nav_book {
+  font-family: 'Univers LT W01 45 Light';
+  font-size: 20px;
+  margin-right: 10px;
+  margin-left: 10px;
+  color: rgb(255,255,200);
+  text-decoration: none;
   position: absolute;
-  right: 25%;
+  right: 21%;
   top: 18px;
 }
 
