--- a/react-app/src/components/HomeSplash/Splash.css
+++ b/react-app/src/components/HomeSplash/Splash.css
@@ -11,3 +11,14 @@
   margin: 0;
   color: aqua;
 }
+
+.about-me-container {
+  background-color: #444444;
+  height: 50px;
+  width: 100%;
+  position: absolute;
+  top: 94.8%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
