--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -59,6 +59,7 @@
 
 .nav_book {
   font-family: "Univers LT W01 45 Light";
+  background-color: #444444;;
   font-size: 20px;
   margin-right: 10px;
   margin-left: 10px;
@@ -66,7 +67,7 @@
   text-decoration: none;
   position: absolute;
   right: 21%;
-  top: 18px;
+  /* top: 18px; */
 }
 
 .nav_title {
@@ -81,6 +82,6 @@
 
 .nav_user {
   position: absolute;
-  right: 1%;
+  right: 5%;
   top: 18px;
 }
