--- a/react-app/src/components/auth/LoginForm.css
+++ b/react-app/src/components/auth/LoginForm.css
@@ -1,56 +1,61 @@
-.email-signup-input-container,
-.username-signup-input-container,
-.password-signup-input-container,
-.confirmPassword-signup-input-container{
+.email-login-input-container,
+.password-login-input-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-bottom: 5px;
-}
-.confirmPassword-signup-input-container{
   padding-bottom: 10%;
 }
-#signup-form{
+
+.login-title {
+  text-align: center;
+  padding-bottom: 5%;
+}
+
+h2 {
+  margin: 0;
+  font-family: "Univers LT W01 45 Light";
+  color: rgb(255,255,200);
+}
+
+#login-form {
   height: 100%;
-  width: 95%;
+  width: 90%;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #444444;
   border-radius: 10px;
 }
-form{
-  height: 90%;
-  width: 85%;
-}
-h2{
-  margin: 0;
-  font-family: "Univers LT W01 45 Light";
-  color: rgb(255,255,200);
-}
-.signup-title{
-  position: relative;
-  text-align: center;
-  padding-bottom: 5%;
-}
-.signup-buttons{
-  display: flex;
-  justify-content: space-between;
-  margin-left: 10%;
-  margin-right: 10%;
-}
+
 #email-label,
-#username-label,
-#password-label,
-#confirmPassword-label{
+#password-label {
   font-family: "Univers LT W01 45 Light";
   color: rgb(255,255,200);
   display: flex;
   justify-content: center;
-  padding-bottom: 3px;
-  text-align: center;
+  padding-bottom: 3%;
 }
-#signup-submit{
+
+.login-button {
+  display: flex;
+  justify-content: space-around;
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+.demo-button {
+  height: 100%;
+  width: 90%;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  top: 229px;
+  left: 175px
+}
+
+#login-submit {
   background-color: darkgreen;
   display:inline-block;
   padding: 0.3em 1.2em;
@@ -66,7 +71,8 @@ h2{
   text-align: center;
   transition: all 0.2s;
 }
-#signup-cancel{
+
+#login-cancel {
   background-color: darkred;
   display:inline-block;
   padding: 0.3em 1.2em;
@@ -82,7 +88,26 @@ h2{
   text-align: center;
   transition: all 0.2s;
 }
-#signup-submit:hover,
-#signup-cancel:hover{
+
+#demo-login {
+  background-color: darkred;
+  display:inline-block;
+  padding: 0.3em 1.2em;
+  margin: 0 0.1em 0.1em 0;
+  border: 0.16em solid rgba(255,255,255,0);
+  border-radius: 2em;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: "Univers LT W01 45 Light";
+  font-weight: 300;
+  color: rgb(255,255,200);
+  text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+  text-align: center;
+  transition: all 0.2s;
+}
+
+#login-submit:hover,
+#demo-login:hover,
+#login-cancel:hover {
   border-color: rgba(0,0,0,1);
 }
