--- a/react-app/src/components/HomeSplash/Splash.css
+++ b/react-app/src/components/HomeSplash/Splash.css
@@ -14,11 +14,35 @@
 
 .about-me-container {
   background-color: #444444;
-  height: 50px;
+  height: 60px;
   width: 100%;
   position: absolute;
-  top: 94.8%;
+  top: 93.8%;
   display: flex;
   justify-content: space-around;
   align-items: center;
+}
+
+.github-button,
+.linkedin-button {
+  display:inline-block;
+  border: none;
+  padding:0.46em 1.6em;
+  margin:0 0.2em 0.2em 0;
+  box-sizing: border-box;
+  text-decoration:none;
+  font-weight:300;
+  text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+  text-align:center;
+  transition: all 0.15s;
+  background-color: #444444;
+  color: rgb(255,255,200);
+  font-family: "Univers LT W01 45 Light";
+  font-size: 25px;
+}
+
+.github-button:hover,
+.linkedin-button:hover {
+  text-shadow: 0 0 2em rgba(255,255,255,1);
+  color:#FFFFFF;
 }
