--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -30,8 +30,10 @@
   color: rgb(255,255,200);
   text-decoration: none;
   position: absolute;
-  right: 5%;
+  right: 7%;
   top: 18px;
+  border: none;
+  background-color: #444444;
 }
 
 .nav_signup {
@@ -42,8 +44,10 @@
   color: rgb(255,255,200);
   text-decoration: none;
   position: absolute;
-  right: 1%;
+  right: .05%;
   top: 18px;
+  border: none;
+  background-color: #444444;
 }
 
 .nav_home {
@@ -84,4 +88,26 @@
   position: absolute;
   right: 5%;
   top: 18px;
+}
+
+button {
+  display:inline-block;
+  border: none;
+  padding:0.46em 1.6em;
+  margin:0 0.2em 0.2em 0;
+  box-sizing: border-box;
+  text-decoration:none;
+  font-weight:300;
+  text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+  text-align:center;
+  transition: all 0.15s;
+  background-color: #444444;
+  color: rgb(255,255,200);
+  font-family: "Univers LT W01 45 Light";
+  font-size: 18px;
+}
+
+button:hover {
+  text-shadow: 0 0 2em rgba(255,255,255,1);
+  color:#FFFFFF;
 }
