--- a/react-app/src/components/auth/SignUpForm.css
+++ b/react-app/src/components/auth/SignUpForm.css
@@ -29,15 +29,16 @@ h2{
   color: rgb(255,255,200);
 }
 .signup-title{
-  position: relative;
   text-align: center;
   padding-bottom: 5%;
+  padding-top: 5%;
 }
 .signup-buttons{
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   margin-left: 10%;
   margin-right: 10%;
+  padding-bottom: 5%;
 }
 #email-label,
 #username-label,
@@ -65,6 +66,7 @@ h2{
   text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
   text-align: center;
   transition: all 0.2s;
+  font-size: 14px;
 }
 #signup-cancel{
   background-color: darkred;
