--- a/react-app/src/components/Books/BookForm.css
+++ b/react-app/src/components/Books/BookForm.css
@@ -22,6 +22,7 @@
   /* min-width: 160px; */
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+  border: 2px solid black
 }
 
 /* Links inside the dropdown */
@@ -30,6 +31,7 @@
   padding: 12px 16px;
   text-decoration: none;
   display: block;
+
 }
 
 /* Show the dropdown menu on hover */
@@ -40,6 +42,7 @@
 .add-book-title,
 #isbn-label {
   font-size: 12px;
+  cursor: default;
 }
 
 .add-book-button,
