--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -72,6 +72,18 @@
   right: 21%;
 }
 
+/* .nav_collection {
+  font-family: "Univers LT W01 45 Light";
+  background-color: #444444;;
+  font-size: 20px;
+  margin-right: 10px;
+  margin-left: 10px;
+  color: rgb(255,255,200);
+  text-decoration: none;
+  position: absolute;
+  right: 21%;
+} */
+
 .nav_title {
   font-family: "Univers LT W01 45 Light";
   font-size: 40px;
@@ -80,6 +92,7 @@
   color: rgb(255,255,200);
   text-decoration: none;
   position: absolute;
+  cursor: default;
 }
 
 .nav_user {
@@ -87,6 +100,7 @@
   left: 5%;
   top: 18px;
   color: rgb(255,255,200);
+  cursor: default;
 }
 
 button {
@@ -104,6 +118,7 @@ button {
   color: rgb(255,255,200);
   font-family: "Univers LT W01 45 Light";
   font-size: 18px;
+  cursor: pointer;
 }
 
 button:hover {
