--- a/react-app/src/components/auth/SignUpForm.css
+++ b/react-app/src/components/auth/SignUpForm.css
@@ -32,6 +32,7 @@ h2{
   text-align: center;
   padding-bottom: 5%;
   padding-top: 5%;
+  cursor: default;
 }
 .signup-buttons{
   display: flex;
@@ -50,6 +51,7 @@ h2{
   justify-content: center;
   padding-bottom: 3px;
   text-align: center;
+  cursor: default;
 }
 #signup-submit{
   background-color: darkgreen;
